fix(design): align infobox icon with text

--- a/src/scss/components/common/infobox.scss
+++ b/src/scss/components/common/infobox.scss
@@ -8,7 +8,7 @@
 
   img {
     width: 16px;
-    margin: 4px 12px 4px 8px;
+    margin: 2px 12px 4px 8px;
     align-self: flex-start;
   }
 
